--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,16 @@
   height: 100%;
   z-index: 1; 
 }
+
+
+@layer utilities {
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  input[type="number"] {
+    -moz-appearance: textfield;
+  }
+}
